[package]
name = "psicasbi"
version = "0.3.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1", features = ["spin_no_std"] }
spin = "0.9.0"
riscv = "0.6.0"
buddy_system_allocator = "0.8"
k210-pac = "0.2.0"
r0 = "1.0.0"

[features]
default = ["qemu"]
qemu = []
k210 = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"