[package]
name = "psicasbi"
version = "0.3.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1", features = ["spin_no_std"] }
spin = "0.9.0"
riscv = "0.6.0"
buddy_system_allocator = "0.8"
k210-pac = "0.2.0"
r0 = "1.0.0"

[features]
default = ["k210"]
qemu = []
k210 = ["soft-extern", "old-spec"]
soft-extern = []		# For platforms that don't have Supervisor Ext Interrupt
old-spec = []			# For platforms that use an old Spec, which differs in ins and reg 

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"